--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@
     <meta http-equiv="pragma" content="no-cache" />
 
     <!-- Set the title bar of the page -->
-    <title>Retro Bowl College</title>
+    <link href="" id="retroicon" rel="icon" />
+    <title id="retrotitle"></title>
+    <script>
+        let disg = [
+            ["To-do", "https://ssl.gstatic.com/classroom/favicon.png"],
+            ["Google Docs", "https://ssl.gstatic.com/docs/documents/images/kix-favicon7.ico"],
+            ["My Drive - Google Drive", "https://ssl.gstatic.com/images/branding/product/1x/drive_2020q4_32dp.png"]
+        ]
+        let thetitle = document.getElementById("retrotitle")
+        let theicon = document.getElementById("retroicon")
+        let randomdisguise = disg[Math.floor(Math.random() * disg.length)]
+        thetitle.innerHTML = randomdisguise[0]
+        theicon.href = randomdisguise[1]
+    </script>
+
 
     <!-- Custom PreStyle code is injected here -->
 
