--- a/index.html
+++ b/index.html
@@ -1,121 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<!-- Custom PreHead code is injected here -->
-
-
-<head>
-    <script src="/js/all.js"></script>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta charset="utf-8" />
-
-    <!-- Builtin injector for disabling cache -->
-    <meta http-equiv="pragma" content="no-cache" />
-
-    <!-- Set the title bar of the page -->
-    <link href="" id="retroicon" rel="icon" />
-    <title id="retrotitle"></title>
-    <script>
-        let disg = [
-            ["To-do", "https://ssl.gstatic.com/classroom/favicon.png"],
-            ["Google Docs", "https://ssl.gstatic.com/docs/documents/images/kix-favicon7.ico"],
-            ["My Drive - Google Drive", "https://ssl.gstatic.com/images/branding/product/1x/drive_2020q4_32dp.png"]
-        ]
-        let thetitle = document.getElementById("retrotitle")
-        let theicon = document.getElementById("retroicon")
-        let randomdisguise = disg[Math.floor(Math.random() * disg.length)]
-        thetitle.innerHTML = randomdisguise[0]
-        theicon.href = randomdisguise[1]
-    </script>
-
-
-    <!-- Custom PreStyle code is injected here -->
-
-
-    <!-- Set the background colour of the document -->
-    <style>
-        body {
-            background: #000;
-            color: #cccccc;
-            margin: 0px;
-            padding: 0px;
-            border: 0px;
-        }
-
-        canvas {
-            image-rendering: pixelated;
-            -webkit-interpolation-mode: nearest-neighbor;
-            -ms-touch-action: none;
-            touch-action: none;
-            margin: 0px;
-            padding: 0px;
-            border: 0px;
-        }
-
-        :-webkit-full-screen #canvas {
-            width: 100%;
-            height: 100%;
-        }
-
-        :-webkit-full-screen {
-            width: 100%;
-            height: 100%;
-        }
-
-        /* Custom Runner Styles */
-        div.gm4html5_div_class {
-            margin: 0px;
-            padding: 0px;
-            border: 0px;
-        }
-
-        div.gm4html5_login {
-            padding: 20px;
-            position: absolute;
-            border: solid 2px #000000;
-            background-color: #404040;
-            color: #00ff00;
-            border-radius: 15px;
-            box-shadow: #101010 20px 20px 40px;
-        }
-
-        div.gm4html5_cancel_button {
-            float: right;
-        }
-
-        div.gm4html5_login_button {
-            float: left;
-        }
-
-        div.gm4html5_login_header {
-            text-align: center;
-        }
-
-        /* END - Custom Runner Styles */
-        :-webkit-full-screen {
-            width: 100%;
-            height: 100%;
-        }
-    </style>
-
-    <!-- Custom PostStyle code is injected here -->
-
-
-    <!-- Builtin injector for injecting flurry analytics code -->
-
-</head>
-
-<!-- Custom PostHead code is injected here -->
-
-
-<!-- Custom PreBody code is injected here -->
-
-
-<body>
-    <div class="gm4html5_div_class" id="gm4html5_div_id">
+        <!-- Start of added code for credit modification -->
+        <button id="get_credits">get lots of ccs</button><br>
+        <button id="export">export</button><br>
+        <textarea id="blig"></textarea>
+        <script>
+            document.getElementById("get_credits").addEventListener("click", () => {
+              if (localStorage.getItem("RetroBowl.0.savedata.ini")) {
+                let z = prompt("how many credits do you have right now (please input correct number)")
+                let x = localStorage.getItem("RetroBowl.0.savedata.ini")
+                let y = x.replace(`coach_credit="${z}"`, 'coach_credit="99999"')
+                localStorage.setItem("RetroBowl.0.savedata.ini", y)
+                window.location = window.location
+              } else {
+                alert("you must open up a new game save first!")
+              }
+            })
+            // Note: The 'export' button and 'blig' textarea require additional JavaScript logic
+            // to function beyond the "get lots of ccs" button functionality provided.
+        </script>
+        <!-- End of added code -->
 
         <!-- Builtin injector for splash screen -->
         <img src="html5game/splash.png" id="GM4HTML5_loadingscreen" alt="GameMaker:HTML5 loading screen"
@@ -157,8 +59,7 @@
                 } else {
                     window.PokiSDK = null;
                     fin(false);
-                }
-            });
+                });
         })();
     </script>
     <!-- Poki end -->
@@ -167,7 +68,3 @@
 
 
 </body>
-
-<!-- Custom PostBody code is injected here -->
-
-</html>
