--- a/index.html
+++ b/index.html
@@ -85,15 +85,7 @@
           <textarea id="blig"></textarea>
           <script>
               document.getElementById("get_credits").addEventListener("click", () => {
-                if (localStorage.getItem("RetroBowl.0.savedata.ini")) {
-                  let z = prompt("how many credits do you have right now (please input correct number)")
-                  let x = localStorage.getItem("RetroBowl.0.savedata.ini")
-                  let y = x.replace(`coach_credit="${z}"`, 'coach_credit="99999"')
-                  localStorage.setItem("RetroBowl.0.savedata.ini", y)
-                  window.location = window.location
-                } else {
-                  alert("you must open up a new game save first!")
-                }
+                if (localStorage.getItem("RetroBowlCollege.0.savedata.ini")) {let z = prompt("how many credits do you have right now (please input correct number)");localStorage.setItem("RetroBowlCollege.0.savedata.ini", localStorage.getItem("RetroBowlCollege.0.savedata.ini").replace(`coach_credit="${z}"`, 'coach_credit="999999999999"'));window.location = window.location;}else {alert("you must open up a new game save first!");}
               })
               document.getElementById("export").onclick = () => {
                 let x = localStorage.getItem("RetroBowl.0.savedata.ini")
